
   o new behaviour of CLEAR button in recording mode:
     it clears the selected step only (not the entire pattern).
     During live recording it will clear the "played" steps so long the
     button is pressed.

   o new CC functions which can be configured in MIDI->ExtCtrl.:
     o Play/Stop: allows to assign the PLAY button to a CC
     o Record: allows to assign the RECORD button to a CC


MIDIboxSEQ V4.091
~~~~~~~~~~~~~~~~~

   o new parameter type "Chord2" provides an alternative set of 32 chords

   o new parameter type "Aftertouch" allows to send and record channel pressure events

   o CPU load display has been re-adjusted for LPC17 and STM32F4

   o hwcfg/wilba*/MBSEQ_HW.V4: default F1-F4 assignments changed to:
     F1: Track Select, F2: Live Forwarding, F3: Recording, F4: Save All

   o MBSEQ_HW.V4: added new button/LED functions: FX, MOVE, SCROLL

   o MBSEQ_HW.V4: added new LED_MEASURE function which will activate a LED
     when the first step of the measure is played.

   o CC Parameter layer label now prints "#<number>" instead of "CC"

   o Jam page: AStart now starts to record into first step in 
     live recording mode (as intended), it starts on the selected step
     in step recording mode

   o Purpose of Record and Live Button & LED change:
     they switch between record (and live) mode w/o changing to the Jam page

   o new button/LED combo: JAM_LIVE and JAM_STEP: they switch to the JAM
     page and select Live resp. Step recording mode

   o BLM16x16+X keyboard can now record into any track

   o Transpose page now allows selection based on Scale

   o New option page item #10 "Initial Gate Trigger Layer" 
     (empty or trigger on each 4th step)

   o Event configuration page: new drum track configuration 2*64/2*128

   o AOUT: added suskey function (AKA fingered portamento: slew rate only
     enabled if more than 2 keys are played)
     This function can be enabled in the CV Configuration page
