@@ -157,7 +157,7 @@ s32 SEQ_CC_Set(u8 track, u8 cc, u8 value)
       case SEQ_CC_TRANSPOSE_SEMI: tcc->transpose_semi = value; break;
       case SEQ_CC_TRANSPOSE_OCT: tcc->transpose_oct = value; break;
       case SEQ_CC_GROOVE_VALUE: tcc->groove_value = value; break;
-      case SEQ_CC_GROOVE_STYLE: tcc->groove_style = value; break;
+      case SEQ_CC_GROOVE_STYLE: tcc->groove_style.ALL = value; break;
       case SEQ_CC_MORPH_MODE: tcc->morph_mode = value; break;
       case SEQ_CC_MORPH_DST: tcc->morph_dst = value; break;
       case SEQ_CC_HUMANIZE_VALUE: tcc->humanize_value = value; break;
@@ -364,7 +364,7 @@ s32 SEQ_CC_Get(u8 track, u8 cc)
     case SEQ_CC_TRANSPOSE_SEMI: return tcc->transpose_semi;
     case SEQ_CC_TRANSPOSE_OCT: return tcc->transpose_oct;
     case SEQ_CC_GROOVE_VALUE: return tcc->groove_value;
-    case SEQ_CC_GROOVE_STYLE: return tcc->groove_style;
+    case SEQ_CC_GROOVE_STYLE: return tcc->groove_style.ALL;
     case SEQ_CC_MORPH_MODE: return tcc->morph_mode;
     case SEQ_CC_MORPH_DST: return tcc->morph_dst;
     case SEQ_CC_HUMANIZE_VALUE: return tcc->humanize_value;
