@@ -241,6 +241,8 @@ NRPN LSB|   Range   | Default | Description
         |           |         |    5: Shuffle4
         |           |         |    6: Shuffle5
         |           |         |    7..21: Custom Grooves 1-16
+        |           |         |
+        |           |         | Bit #6 enables Sync to Track
 --------+-----------+---------+------------------------------------------------
 0x33/ 51|   0 - 15  |       0 | Groove Intensity
 --------+-----------+---------+------------------------------------------------
